fix: quick pick icon spacing (#519)

--- a/static/css/parts/QuickPick.css
+++ b/static/css/parts/QuickPick.css
@@ -75,6 +75,7 @@
   /* position: absolute; */
   padding: 0 6px;
   contain: strict;
+  gap: 4px;
 }
 
 .QuickPickItem:hover {
